# fluidbean

./: .gitignore  CMakeLists.txt  fluidbean.pc.in  log  tags  todo
.cache/clangd/index/: fluid_chan.c.4FB4C704DAAE3826.idx  fluid_chan.h.190557D6343896E5.idx  fluid_chorus.c.BAC6D4A3A2D781A5.idx  fluid_chorus.h.73EEB85548AFBDC9.idx  fluid_config.h.7DF91CB5BEED4C72.idx  fluid_conv.c.0C307A332F8F1679.idx  fluid_conv.h.6CB6AAA7755AF8D1.idx  fluid_defsfont.c.17E6E3B0967343D9.idx  fluid_defsfont.h.CD856B732C008DBD.idx  fluid_dsp_float.c.52D3B439785F24CF.idx  fluid_gen.c.8A973A67D04D5A4B.idx  fluid_gen.h.578341A7931ADFDC.idx  fluid_hash.c.F041AAEA4F1158F1.idx  fluid_hash.h.57C3784214434BE3.idx  fluid_init.c.341D3A30124FC27F.idx  fluid_list.c.716A3826730E1F0D.idx  fluid_list.h.A976E9602A2768DF.idx  fluid_midi.h.CD82E5E17357CA81.idx  fluid_mod.c.063DA68A188FBA22.idx  fluid_mod.h.B155A69454BEFD89.idx  fluid_phase.h.C842A02C55E9E135.idx  fluid_rev.c.EC68D2EBD9A6E7EE.idx  fluid_rev.h.83143B7311FF700D.idx  fluid_settings.c.B564D21B182AFD7A.idx  fluid_settings.h.18303342E1A5C26C.idx  fluid_sfont.h.D22AF9BDCAC41C97.idx  fluid_synth.c.EF750DBAF44DD2CB.idx  fluid_synth.h.A2AB5D0F6E8247EA.idx  fluid_sys.c.1A1B65B2BCE3D420.idx  fluid_sys.h.B08ADDB310AD4D45.idx  fluid_tuning.c.CB7217A07209FE8F.idx  fluid_tuning.h.B2E99322319A6E10.idx  fluid_voice.c.196C4084F564C6B2.idx  fluid_voice.h.31D4F5787F2F7868.idx  fluidbean.h.355A067B3628A5BB.idx  fluidsynth_priv.h.8176720E8B687C4E.idx  gen.h.AED71F7345142B9D.idx  log.h.D15F249F8665528B.idx  misc.h.177498E92381B85F.idx  mod.h.E98F85A26C81957D.idx  (+8 more)
cmake_admin/: PkgConfigHelpers.cmake
crap/: fluid_midi.h  fluid_synth.h
drivers/: fluid_adriver.c  fluid_alsa.c
drivers/audio/: adriver.c  alsa.c  aufile.c  coreaudio.c  coremidi.c  dart.c  dsound.c  fluid_adriver.c  fluid_alsa.c  fluid_aufile.c  fluid_coreaudio.c  fluid_coremidi.c  fluid_dart.c  fluid_dsound.c  fluid_jack.c  fluid_mdriver.c  fluid_midishare.c  fluid_oboe.cpp  fluid_opensles.c  fluid_oss.c  fluid_pipewire.c  fluid_portaudio.c  fluid_pulse.c  fluid_sdl2.c  fluid_sndmgr.c  fluid_wasapi.c  fluid_waveout.c  fluid_winmidi.c  jack.c  mdriver.c  midishare.c  oboe.cpp  opensles.c  oss.c  pipewire.c  portaudio.c  pulse.c  sdl2.c  sndmgr.c  wasapi.c  (+2 more)
drivers/audio/include/: adriver.h  audio.h  fluid_adriver.h  fluid_mdriver.h  mdriver.h
drivers/include/: audio.h  fluid_adriver.h
drivers/midi/: fluid_midi.c  fluid_midi.c~  fluid_midi_router.c  fluid_seq.c  fluid_seqbind.c  midi.c  midi_router.c  seq.c  seq_queue.cpp  seqbind.c  seqbind_notes.cpp
drivers/midi/include/: fluid_midi.h  fluid_midi_router.h  fluid_seq_queue.h  fluid_seqbind_notes.h  midi_router.h  seq_queue.h  seqbind_notes.h
example/: Makefile  compile_commands.json  log
example/.cache/clangd/index/: CMakeCCompilerId.c.3D9DE8DC159496F8.idx  CMakeCXXCompilerId.cpp.9FF7F3F0B8EC71AF.idx  main.c.1796088A4127F1FE.idx  sf3Inf.c.5EA035A5B199C580.idx
example/sf_/: Boomwhacker.sf2.pcm
example/src/: main.c  sf3Inf.c
include/: fluidlite.h
include/fluidsynth/: gen.h  mod.h  sfont.h  synth.h  types.h
libbotox/: compile_commands.json
libbotox/src/: data.c  x.c
libbotox/src/include/: data.h
src/: Makefile.os2  chan.c  chorus.c  chorusBean.c  conv.c  defsfont.c  dsp_float.c  fluid_chan.c  fluid_chorus.c  fluid_conv.c  fluid_conv.h  fluid_defsfont.c  fluid_defsfont.c~  fluid_defsfont.h  fluid_dsp_float.c  fluid_dsp_simple.c  fluid_gen.c  fluid_gen.h  fluid_hash.c  fluid_hash.h  fluid_init.c  fluid_list.c  fluid_midi.h  fluid_mod.c  fluid_ramsfont.c  fluid_ramsfont.h  fluid_rev.c  fluid_rev.h  fluid_settings.c  fluid_synth.c  fluid_synth.h  fluid_sys.c  fluid_sys.h  fluid_tuning.c  fluid_tuning.h  fluid_voice.c  fluid_voice.h  fluidsynth_priv.h  gen.c  grok  (+10 more)
src/include/: chan.h  chorus.h  config.h  conv.h  enums.h  fluid_chan.h  fluid_chorus.h  fluid_defsfont.h  fluid_hash.h  fluid_list.h  fluid_midi.h  fluid_phase.h  fluid_ramsfont.h  fluid_settings.h  fluid_sfont.h  fluid_synth.h  fluid_sys.h  fluid_voice.h  fluidbean.h  fluidsynth_priv.h  gen.h  midi.h  mod.h  phase.h  rev.h  soundfont.h  synth.h  sys.h  tuning.h  voice.h
